--- a/Makefile.rendorc
+++ b/Makefile.rendorc
@@ -2,15 +2,15 @@ CXX       := g++
 CXX_FLAGS := -std=c++17 -Wall -Wfatal-errors 
 
 BIN     := bin
-SRC     := src
+SRC     := src/RendorCompiler
 INCLUDE := include
 BOOST := "C:/C++ Libaries/boost_1_77_0/"
 
 LIBRARIES   := "C:/C++ Libaries/boost_1_77_0/stage/lib/"
-EXECUTABLE  := rendorc
+EXECUTABLE  := RendorCompiler/rendorc
 
-BOOSTFILE := boost_filesystem
-BOOSTSYS := boost_system
+BOOSTFILE := boost_filesystem-mgw8-mt-x64-1_77
+BOOSTSYS := boost_system-mgw8-mt-x64-1_77
 
 all: $(BIN)/$(EXECUTABLE)
 
