Moved test files Makefiles now only recompiled modified files ObjectFiles directories added

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 /.vscode/
+
 /bin/RendorCompiler/rendorc.exe
 /bin/RendorInterpreter/rendorvm.exe
+
+/bin/RendorCompiler/ObjectFiles/*.o
+/bin/RendorInterpreter/ObjectFiles/*.o
+
 .gitconfig
 Makefile
