--- a/Makefile.rendorc
+++ b/Makefile.rendorc
@@ -1,5 +1,5 @@
 CXX         := g++
-CXX_FLAGS   := -std=c++20 -Wall -Wfatal-errors -static
+CXX_FLAGS   := -std=c++20 -Wall -Wfatal-errors -static -static-libgcc -static-libstdc++ 
 
 BIN         := bin
 OBJDIR      := bin/RendorCompiler/ObjectFiles
