Rewritten Interpreter Memory is handled sing std::shared_ptr now Garbage collector is implemented Errors in the compiler have errors now Rendor rearrages bytecode with the DeltaOptimize function(needs work) Math evaluation has been removed for now if statemenets are removed for now

--- a/Makefile.rendorc
+++ b/Makefile.rendorc
@@ -5,7 +5,7 @@ BIN         := bin
 OBJDIR      := bin/RendorCompiler/ObjectFiles
 SRC         := src/RendorCompiler
 INCLUDE     := include
-LIBRARIES   := 
+LIBRARIES   := g++
 
 EXECUTABLE  := RendorCompiler/rendorc
 
@@ -24,8 +24,9 @@ run: clean all
 $(BIN)/$(EXECUTABLE): $(OBJECTS)
 	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) $^ -o $@ -l$(BOOSTFILE) -l$(BOOSTSYS)
 
-$(OBJECTS): $(OBJDIR)/%.o: $(SRC)/%.cpp 
+$(OBJECTS): $(OBJDIR)/%.o: $(SRC)/%.cpp
 	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) $^ -c -o $@ -l$(BOOSTFILE) -l$(BOOSTSYS)
+	
 
 clean:
 	-rm $(OBJDIR)/*.o
