--- a/Makefile.rendor
+++ b/Makefile.rendor
@@ -1,8 +1,9 @@
 CXX         := g++
-CXX_FLAGS   := -std=c++20 -Wall -Wfatal-errors -static -static-libgcc -static-libstdc++
+CXX_FLAGS   := -std=c++20 -Wall -Wfatal-errors -static -static-libgcc -static-libstdc++ 
 
 BIN         := bin
 OBJDIR      := bin/RendorInterpreter/ObjectFiles
+TERMSRC     := include/cpp-terminal
 SRC         := src/RendorInterpreter
 INCLUDE     := include
 LIBRARIES   := 
@@ -10,7 +11,10 @@ LIBRARIES   :=
 EXECUTABLE  := RendorInterpreter/rendorvm
 
 SOURCES     := $(wildcard $(SRC)/*.cpp)
+TERM_SRCS   := $(wildcard $(TERMSRC)/*.cpp)
+
 OBJECTS     := $(patsubst $(SRC)/%.cpp,$(OBJDIR)/%.o,$(SOURCES))
+TERM_OBJS   := $(patsubst $(TERMSRC)/%.cpp,$(OBJDIR)/%.o,$(TERM_SRCS))
 
 BOOSTFILE   := boost_filesystem-mt
 BOOSTSYS    := boost_system-mt
@@ -24,8 +28,11 @@ run: clean all
 $(BIN)/$(EXECUTABLE): $(OBJECTS)
 	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) $^ -o $@ -l$(BOOSTFILE) -l$(BOOSTSYS)
 
-$(OBJECTS): $(OBJDIR)/%.o: $(SRC)/%.cpp
+$(OBJECTS): $(OBJDIR)/%.o: $(TERM_OBJS) $(SRC)/%.cpp 
 	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) $^ -c -o $@ -l$(BOOSTFILE) -l$(BOOSTSYS)
+
+$(TERM_OBJS): $(OBJDIR)/%.o: $(TERMSRC)/%.cpp
+	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) $^ -c -o $@ 
 
 clean:
 	-rm $(OBJDIR)/*.o
