--- a/Makefile.rendor
+++ b/Makefile.rendor
@@ -1,21 +1,20 @@
 CXX         := g++
-CXX_FLAGS   := -std=c++20 -Wall -Wextra -pedantic -Werror -static -static-libgcc -static-libstdc++ 
+CXX_FLAGS   := -std=c++20 -Wall -Wextra -Werror -static -static-libgcc -static-libstdc++ 
 
 BIN         := bin
 OBJDIR      := bin/RendorInterpreter/ObjectFiles
-ASM_SRC     := include/cpp-terminal
 SRC         := src/RendorInterpreter
-INCLUDE     := include
-LIBRARIES   := 
+INCLUDE     := -Iinclude -Isrc/asmjit
+LIBRARIES   := -Llib
 
 EXECUTABLE  := RendorInterpreter/rendorvm
 
 SOURCES     := $(wildcard $(SRC)/*.cpp) 
-SOURCETERM  := $(wildcard $(SRCTERM)/*.cpp)
-OBJECTS     := $(patsubst $(SRC)/%.cpp,$(OBJDIR)/%.o,$(SOURCES)) $(patsubst $(SRCTERM)/%.cpp,$(OBJDIR)/%.o,$(SOURCETERM))
+OBJECTS     := $(patsubst $(SRC)/%.cpp,$(OBJDIR)/%.o,$(SOURCES)) 
 
 BOOSTFILE   := boost_filesystem-mt
 BOOSTSYS    := boost_system-mt
+ASM_JIT     := asmjit
 
 all: $(BIN)/$(EXECUTABLE)
 
@@ -25,10 +24,10 @@ run: clean all
 
 $(BIN)/$(EXECUTABLE): $(OBJECTS)
 	@echo 
-	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) $^ -o $@ -l$(BOOSTFILE) -l$(BOOSTSYS)
+	$(CXX) $(CXX_FLAGS) $(INCLUDE) $^ -o $@ -l$(BOOSTFILE) -l$(BOOSTSYS) $(LIBRARIES) -l$(ASM_JIT)
 
-$(TERM_OBJS): $(OBJDIR)/%.o: $(TERMSRC)/%.cpp
-	$(CXX) $(CXX_FLAGS) -I$(INCLUDE) $^ -c -o $@ 
+$(OBJDIR)/%.o: $(SRC)/%.cpp 
+	$(CXX) $(CXX_FLAGS) $(INCLUDE) $^ -c -o $@ 
 
 clean:
 	-rm $(OBJDIR)/*.o
