--- a/Makefile.rendorc
+++ b/Makefile.rendorc
@@ -1,5 +1,5 @@
 CXX         := g++
-CXX_FLAGS   := -std=c++20 -Wall -Wextra -pedantic -Werror -static -static-libgcc -static-libstdc++ -ggdb
+CXX_FLAGS   := -std=c++20 -Wall -Wextra -pedantic -Werror -static -static-libgcc -static-libstdc++
 
 BIN         := bin
 OBJDIR      := bin/RendorCompiler/ObjectFiles
