--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,11 +8,16 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+    - name: update
+      run: sudo apt-get update
+    - name: GCC 11
+      run: sudo apt install gcc-11 g++-11
+    - name: boost
+      run: sudo apt-get install -yq libboost-all-dev
     - name: make rendor
       run: make -f Makefile.rendorc
     - name: make rendorc
