--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,6 +18,8 @@ jobs:
       run: sudo apt install gcc-11 g++-11
     - name: boost
       run: sudo apt-get install -yq libboost-all-dev
+    - name: GCC version
+      run: g++ --version
     - name: make rendor
       run: make -f Makefile.rendorc
     - name: make rendorc
