--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,8 +18,10 @@ jobs:
       run: sudo apt install gcc-11 g++-11
     - name: boost
       run: sudo apt-get install -yq libboost-all-dev
+    - name: set GCC version
+      run: sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-11 11
     - name: GCC version
-      run: g++-11 --version
+      run: g++- --version
     - name: make rendor
       run: make -f Makefile.rendorc
     - name: make rendorc
