--- a/Makefile.rendor
+++ b/Makefile.rendor
@@ -6,17 +6,14 @@ INCLUDE     := -Iinclude
 
 SRC         := src/RendorInterpreter
 STD_SRC     := src/RendorSTD
-DIRS        := API GarbageCollector Logic
+DIRS        := API GarbageCollector Logic RendorSTD
 
 OBJDIR      := bin/RendorInterpreter/ObjectFiles
-STD_OBJDIR  := bin/RendorSTD
 EXECUTABLE  := RendorInterpreter/rendorvm
 
 SOURCES     := $(wildcard $(SRC)/*.cpp) $(foreach Directory, $(DIRS), $(wildcard $(SRC)/$(Directory)/*.cpp))
 OBJECTS     := $(patsubst $(SRC)/%.cpp,$(OBJDIR)/%.o,$(SOURCES))
 
-STD_SOURCES := $(wildcard $(STD_SRC)/*.cpp)
-STD_OBJECTS := $(patsubst $(STD_SRC)/%.cpp,$(STD_OBJDIR)/%.o,$(SOURCES))
 
 BOOSTFILE   := boost_filesystem-mt
 BOOSTSYS    := boost_system-mt
@@ -32,9 +29,6 @@ $(BIN)/$(EXECUTABLE): $(OBJECTS) $(STD_OBJECTS)
 	$(CXX) $(CXX_FLAGS) $(INCLUDE) $^ -o $@ -l$(BOOSTFILE) -l$(BOOSTSYS)
 
 $(OBJDIR)/%.o: $(SRC)/%.cpp 
-	$(CXX) $(CXX_FLAGS) $(INCLUDE) $^ -c -o $@ 
-
-$(STD_OBJECTS)/%.o: $(STD_SRC)/%.cpp 
 	$(CXX) $(CXX_FLAGS) $(INCLUDE) $^ -c -o $@ 
 
 clean:
