Added support for the extern, namespace, export, import, and cimport keywords in the AST Removed the cpp-terminal library in exchange for the fmt library Removed some use of boost::format in exchange for fmt::format Removed use of std::cout in RendorEngineCompiler in exchange for fmt::print Added io.ren as a test for the compiler Added some info about the RBI in RendorInfo.txt Added ExportNode.hpp Added ImportNodes.hpp Added NodeType.hpp Added TempID.hpp Added Makefile.std Moved the RendorSTD directory RendorAPI.h is now RendorAPI.hpp

--- a/Makefile.rendor
+++ b/Makefile.rendor
@@ -5,15 +5,13 @@ BIN         := bin
 INCLUDE     := -Iinclude
 
 SRC         := src/RendorInterpreter
-STD_SRC     := src/RendorSTD
-DIRS        := API GarbageCollector Logic RendorSTD
+DIRS        := API GarbageCollector Logic
 
 OBJDIR      := bin/RendorInterpreter/ObjectFiles
 EXECUTABLE  := RendorInterpreter/rendorvm
 
 SOURCES     := $(wildcard $(SRC)/*.cpp) $(foreach Directory, $(DIRS), $(wildcard $(SRC)/$(Directory)/*.cpp))
 OBJECTS     := $(patsubst $(SRC)/%.cpp,$(OBJDIR)/%.o,$(SOURCES))
-
 
 BOOSTFILE   := boost_filesystem-mt
 BOOSTSYS    := boost_system-mt
@@ -24,7 +22,7 @@ run: clean all
 	clear
 	./$(BIN)/$(EXECUTABLE)
 
-$(BIN)/$(EXECUTABLE): $(OBJECTS) $(STD_OBJECTS)
+$(BIN)/$(EXECUTABLE): $(OBJECTS)
 	@echo 
 	$(CXX) $(CXX_FLAGS) $(INCLUDE) $^ -o $@ -l$(BOOSTFILE) -l$(BOOSTSYS)
 
