--- a/Makefile.rendorc
+++ b/Makefile.rendorc
@@ -1,11 +1,11 @@
 CXX         := g++
-CXX_FLAGS   := -std=c++20 -lstdc++fs -Wall -Wextra -Werror -static -static-libgcc -static-libstdc++ -ggdb
+CXX_FLAGS   := -std=c++20 -lstdc++fs -Wall -Wextra -Werror -static -static-libgcc -static-libstdc++ -DBOOST_DLL_USE_STD_FS -DFMT_HEADER_ONLY -ggdb
 
 BIN         := bin
 INCLUDE     := -Iinclude
 
 SRC         := src/RendorCompiler
-DIRS        := BackEnd InspectAndOptimize Lexer Logic Parser
+DIRS        := BackEnd InspectAndOptimize Lexer Logic Parser API
 
 OBJDIR      := bin/RendorCompiler/ObjectFiles
 EXECUTABLE  := RendorCompiler/rendorc
