Added support for calling functions in a namespace WIP on binary file output

--- a/Makefile.rendorc
+++ b/Makefile.rendorc
@@ -5,7 +5,7 @@ BIN         := bin
 INCLUDE     := -Iinclude
 
 SRC         := src/RendorCompiler
-DIRS        := BackEnd InspectAndOptimize Lexer Logic Parser API
+DIRS        := BackEnd BackEnd/Compiler InspectAndOptimize Lexer Logic Parser API
 
 OBJDIR      := bin/RendorCompiler/ObjectFiles
 EXECUTABLE  := RendorCompiler/rendorc
