Allowed the compilation of binary_io.cpp

--- a/Makefile.rendor
+++ b/Makefile.rendor
@@ -1,5 +1,5 @@
 CXX         := g++
-CXX_FLAGS   := -std=c++20 -Wall -Wextra -Werror -static -static-libgcc -static-libstdc++
+CXX_FLAGS   := -std=c++20 -Wall -Wextra -Werror -static -static-libgcc -static-libstdc++ -Llib -lbinary_io
 
 BIN         := bin
 INCLUDE     := -Iinclude
