--- a/Makefile.rendor
+++ b/Makefile.rendor
@@ -1,5 +1,5 @@
 CXX         := g++
-CXX_FLAGS   := -std=c++20 -Wall -Wextra -Werror -Wfatal-errors -static -static-libgcc -static-libstdc++
+CXX_FLAGS   := -std=c++20 -Wall -Wextra -Werror -Wfatal-errors -static -static-libgcc -static-libstdc++ -DFMT_HEADER_ONLY
 
 BIN         := bin
 INCLUDE     := -Iinclude
