--- a/Makefile.rendor_asm
+++ b/Makefile.rendor_asm
@@ -23,18 +23,19 @@ WARNINGS 	:= 	-Werror						\
 				-Wdouble-promotion			\
 
 				
-CXX_FLAGS   := -std=c++20 -static -static-libgcc -static-libstdc++ -DFMT_HEADER_ONLY
+CXX_FLAGS   := -std=c++20 -static -static-libgcc -static-libstdc++ -DFMT_HEADER_ONLY -ggdb
 
 BIN         := bin
 INCLUDE     := -Iinclude
 
-SRC         := src/RendorInterpreter
+SRC         := src/RendorAssembler
 
-OBJDIR      := bin/RendorInterpreter/ObjectFiles
-EXECUTABLE  := RendorInterpreter/rendorvm
+OBJDIR      := bin/RendorAssembler/ObjectFiles
+EXECUTABLE  := RendorAssembler/rendorasm
 
 SOURCES     := $(wildcard $(SRC)/*.cpp) $(wildcard $(SRC)/**/*.cpp)
 OBJECTS     := $(patsubst $(SRC)/%.cpp,$(OBJDIR)/%.o,$(SOURCES))
+BOOSTSYS    := boost_system-mt
 
 all: $(BIN)/$(EXECUTABLE)
 
@@ -44,7 +45,7 @@ run: clean all
 
 $(BIN)/$(EXECUTABLE): $(OBJECTS)
 	@echo 
-	$(CXX) $(CXX_FLAGS) $(INCLUDE) $^ -o $@ -Llib -lbinary_io
+	$(CXX) $(CXX_FLAGS) $(INCLUDE) $^ -o $@ -l$(BOOSTSYS)
 	@echo 
 
 $(OBJDIR)/%.o: $(SRC)/%.cpp 
